--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,6 +11,65 @@ body {
     box-sizing: border-box;
 }
 
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.slow-fade-enter-active,
+.slow-fade-leave-active {
+  transition: opacity 2s ease;
+}
+
+.slow-fade-enter-from,
+.slow-fade-leave-to {
+  opacity: 0;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    
+    .modal-content {
+        position: relative;
+        background: #000;
+        border-radius: 8px;
+
+        .button-container {
+            width: 100%;
+            display: flex;
+            justify-content: end;
+            padding: 0.5rem 0.4rem 0rem 0rem;
+            
+            .close-button {
+                width: 1.5em;
+                height: 1.5em;
+
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.75;
+                }
+            }
+        }
+
+        .youtube-video {
+            padding: 0rem 2rem 1.5rem 2rem;
+        }
+    }
+}
 
 .header {
     position: fixed;
@@ -33,6 +92,7 @@ body {
 
         .nav-links {
             display: flex;
+            align-items: center;
             gap: 3rem;
 
             .nav-link {
@@ -41,11 +101,18 @@ body {
                 transition: color 0.3s ease;
                 font-family: Futura, sans-serif;
                 font-weight: bold;
-                font-size: small;
+                font-size: 12px;
                 letter-spacing: 0.1em;
+
+                &.contact {
+                    background-color: #004159;
+                    padding: 0.5rem;
+                    border: 1px solid #FFF;
+                }
 
                 &:hover {
                     color: #aaa;
+                    cursor: pointer;
                 }
             }
         }
@@ -55,10 +122,46 @@ body {
 .showreel {
     padding: 7rem 6rem 3rem 6rem;
     background-color: #323232;
-
-    .showreel-video {
+    
+    .showreel-content {
         width: 100%;
+        display: flex;
+        justify-content: center;
+
+        .showreel-container {
+            position: relative;
+            width: 100%;
+            padding-top: 56.25%;
+            height: 0;
+            
+            .showreel-video {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+    
+            .overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: black;
+                opacity: 0;
+                transition: opacity 0.5s ease;
+    
+                &.is-visible {
+                    opacity: 1;
+                }
+            }
+        }
     }
+
+    
+    
     
     .showreel-subtext-container {
         display: flex;
@@ -79,6 +182,7 @@ body {
 }
 
 .editing {
+    scroll-margin-top: 110px;
     padding: 1rem 6rem;
     background-color: #004159;
 
@@ -103,14 +207,39 @@ body {
             flex-direction: column;
             align-items: center;
             margin-bottom: 1rem;
-        
-            img {
-                width: 13em;
+            
+            .video-container {
+                position: relative;
+                width: 13rem;
                 height: 13rem;
                 margin-bottom: 0.75rem;
-                object-fit: cover;
-                object-position: center;
+                overflow: hidden;
+                background-color: #000;
+                z-index: 0;
+
+                &:hover {
+                    cursor: pointer;
+                }
+
+                .project-video, .project-image { 
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
+
+                .project-image {
+                    z-index: 2; 
+                }
+                
+                .project-video {
+                    z-index: 1;
+                }
             }
+            
         
             .project-title {
                 max-width: 12rem;
@@ -134,6 +263,7 @@ body {
 } 
 
 .professional-information {
+    scroll-margin-top: 110px;
     padding: 2rem 6rem;
 
     .title {
@@ -238,6 +368,7 @@ body {
 }
 
 .about-me {
+    scroll-margin-top: 105px;
     padding: 2rem 6rem 6rem 6rem;
     background-image: url('../images/EyePainting.jpg');
     background-position: center;
@@ -317,6 +448,7 @@ body {
 }
 
 .contact-me {
+    scroll-margin-top: 100px;
     padding: 4rem 6rem 4rem 6rem;
     background-color: #c2c2c2;
     
