--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -23,7 +23,7 @@ body {
 
 .slow-fade-enter-active,
 .slow-fade-leave-active {
-  transition: opacity 2s ease;
+  transition: opacity 1s ease;
 }
 
 .slow-fade-enter-from,
@@ -214,8 +214,6 @@ body {
                 height: 13rem;
                 margin-bottom: 0.75rem;
                 overflow: hidden;
-                background-color: #000;
-                z-index: 0;
 
                 &:hover {
                     cursor: pointer;
@@ -231,12 +229,12 @@ body {
                     object-position: center;
                 }
 
-                .project-image {
-                    z-index: 2; 
-                }
-                
                 .project-video {
-                    z-index: 1;
+                    z-index: 2;
+                }
+
+                .project-image {
+                    z-index: 1; 
                 }
             }
             
@@ -485,7 +483,7 @@ body {
         
         .col-2 {
             width: 35%;
-            padding: 0 1.5rem;
+            padding: 0 4rem 0 1rem;
 
             .quote-circle {
                 width: 100%;;
