--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,6 +44,52 @@ body {
     background-color: transparent;
 }
 
+.eye-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #222222; /* Semi-transparent black background */
+
+    .eye {
+        width: 100px;
+        height: 50px;
+        background: #fff;
+        position: relative;
+        border-radius: 50%;
+        border: solid 3px #000;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .pupil {
+            width: 50px;
+            height: 50px; /* Height is 100% of the eye's vertical space */
+            background: #000;
+            border-radius: 50%;
+        }
+        
+        .eyelid {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: #000;
+            transition: bottom 1s ease;
+        }
+    }
+}
+  
+  
+  
+  
+
 .modal-overlay {
     position: fixed;
     top: 0;
