--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -192,6 +192,7 @@ body {
             width: 100%;
             padding-top: 56.25%;
             height: 0;
+            background: #000;
             
             .showreel-video {
                 width: 100%;
@@ -200,22 +201,28 @@ body {
                 position: absolute;
                 top: 0;
                 left: 0;
-            }
-    
-            .overlay {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: black;
                 opacity: 0;
-                transition: opacity 0.5s ease;
-    
-                &.is-visible {
+                transition: opacity 1s ease;
+
+                &.fade-in {
                     opacity: 1;
                 }
             }
+    
+            // .overlay {
+            //     position: absolute;
+            //     top: 0;
+            //     left: 0;
+            //     width: 100%;
+            //     height: 100%;
+            //     background-color: black;
+            //     opacity: 0;
+            //     transition: opacity 0.5s ease;
+    
+            //     &.is-visible {
+            //         opacity: 1;
+            //     }
+            // }
         }
     }
 
