--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,6 +11,21 @@ body {
     box-sizing: border-box;
 }
 
+.intro-video-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #000;
+
+    .intro-centered-video {
+        width: auto; /* Adjust based on your design preference */
+        max-width: 100%; /* Ensures it doesn't overflow the screen */
+        height: auto; /* Maintain aspect ratio */
+        max-height: 100vh; /* Ensures it doesn't overflow vertically */
+    }
+}
+
 .fade-enter-active,
 .fade-leave-active {
     transition: opacity 0.5s ease;
@@ -31,63 +46,16 @@ body {
 
 .site-fade-enter-active, 
 .site-fade-leave-active {
-    transition: opacity 0.5s, background-color 0.5s;
+    transition: opacity 0.5s,
 }
 .site-fade-enter-from, 
 .site-fade-leave-to {
     opacity: 0;
-    background-color: white;
 }
 .site-fade-enter-to, 
 .site-fade-leave-from {
     opacity: 1;
-    background-color: transparent;
 }
-
-.eye-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #222222; /* Semi-transparent black background */
-
-    .eye {
-        width: 100px;
-        height: 50px;
-        background: #fff;
-        position: relative;
-        border-radius: 50%;
-        border: solid 3px #000;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .pupil {
-            width: 50px;
-            height: 50px; /* Height is 100% of the eye's vertical space */
-            background: #000;
-            border-radius: 50%;
-        }
-        
-        .eyelid {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: #000;
-            transition: bottom 1s ease;
-        }
-    }
-}
-  
-  
-  
   
 
 .modal-overlay {
