--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,8 @@
+@import 'mixins';
 @import 'fonts';
 @import 'animations';
+@import 'components';
+@import 'views';
 
 body {
     font-family: Museo, sans-serif;
@@ -12,578 +15,43 @@ body {
     box-sizing: border-box;
 }
 
-.intro-video-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #000;
+header, section {
+    padding-left: 6rem;
+    padding-right: 6rem;
 
-    .intro-centered-video {
-        width: auto; /* Adjust based on your design preference */
-        max-width: 100%; /* Ensures it doesn't overflow the screen */
-        height: auto; /* Maintain aspect ratio */
-        max-height: 100vh; /* Ensures it doesn't overflow vertically */
+    @include break('l') {
+        padding-left: 4rem;
+        padding-right: 4rem;
     }
-}
-  
 
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-    
-    .modal-content {
-        position: relative;
-        background: #000;
-        border-radius: 8px;
+    @include break('m') {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
 
-        .button-container {
-            width: 100%;
-            display: flex;
-            justify-content: end;
-            padding: 0.5rem 0.4rem 0rem 0rem;
-            
-            .close-button {
-                width: 1.5em;
-                height: 1.5em;
+    @include break('s') {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 
-                &:hover {
-                    cursor: pointer;
-                    opacity: 0.75;
-                }
-            }
-        }
-
-        .youtube-video {
-            padding: 0rem 2rem 1.5rem 2rem;
-        }
+    @include break('xs') {
+        padding-left: 0rem;
+        padding-right: 0rem;
     }
 }
 
-.header {
-    position: fixed;
-    background-color: #323232;
-    padding: 3rem 6rem 2rem 6rem;
-    top: 0;  
-    width: 100%;
-    z-index: 5;
+h1 {
+    text-align: center;
+    letter-spacing: 0.1em;
+    font-family: Futura, sans-serif;
+    font-size: 2rem;
+    margin-bottom: 2rem;
 
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0 auto;
-
-        .brand {
-            width: 14rem;
-            margin-right: 4rem;
-        }
-
-        .nav-links {
-            display: flex;
-            align-items: center;
-            gap: 3rem;
-
-            .nav-link {
-                text-decoration: none;
-                color: #fff;
-                transition: color 0.3s ease;
-                font-family: Futura, sans-serif;
-                font-weight: bold;
-                font-size: 12px;
-                letter-spacing: 0.1em;
-
-                &.contact {
-                    background-color: #004159;
-                    padding: 0.5rem;
-                    border: 1px solid #FFF;
-                }
-
-                &:hover {
-                    color: #aaa;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
-}
-
-.showreel {
-    padding: 7rem 6rem 3rem 6rem;
-    background-color: #323232;
-    
-    .showreel-content {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-
-        .showreel-container {
-            position: relative;
-            width: 100%;
-            padding-top: 56.25%;
-            height: 0;
-            background: #000;
-            
-            .showreel-video {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                position: absolute;
-                top: 0;
-                left: 0;
-                opacity: 0;
-                transition: opacity 1s ease;
-
-                &.fade-in {
-                    opacity: 1;
-                }
-            }
-    
-            // .overlay {
-            //     position: absolute;
-            //     top: 0;
-            //     left: 0;
-            //     width: 100%;
-            //     height: 100%;
-            //     background-color: black;
-            //     opacity: 0;
-            //     transition: opacity 0.5s ease;
-    
-            //     &.is-visible {
-            //         opacity: 1;
-            //     }
-            // }
-        }
+    @include break('m') {
+        font-size: 1.5rem;
     }
 
-    
-    
-    
-    .showreel-subtext-container {
-        display: flex;
-        justify-content: center;
-        margin-top: 2rem;
-
-        .showreel-subtext {
-            color: #fff;
-            font-family: Museo, sans-serif;
-            font-weight: 700;
-            font-size: 0.8rem;
-            
-            .bold {
-                font-weight: 900;
-            }
-        }
-    }
-}
-
-.editing {
-    scroll-margin-top: 110px;
-    padding: 1rem 6rem;
-    background-color: #004159;
-
-    .title {
-        text-align: center;
-        color: #fff;
-        letter-spacing: 0.1em;
-        font-family: Futura, sans-serif;
-        font-size: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    .projects {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    
-        .project {
-            flex-basis: calc(20% - 3rem);
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 1rem;
-            
-            .video-container {
-                position: relative;
-                width: 13rem;
-                height: 13rem;
-                margin-bottom: 0.75rem;
-                overflow: hidden;
-
-                &:hover {
-                    cursor: pointer;
-                }
-
-                .project-video, .project-image { 
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    object-position: center;
-                }
-
-                .project-video {
-                    z-index: 2;
-                }
-
-                .project-image {
-                    z-index: 1; 
-                }
-            }
-            
-        
-            .project-title {
-                max-width: 12rem;
-                text-align: center;
-                font-size: 14px;
-                font-weight: 500;
-                margin-bottom: 0.3rem;
-                letter-spacing: 0.05em;
-                line-height: 1.4;
-            }
-        
-            .project-description {
-                max-width: 12rem;
-                text-align: center;
-                font-style: italic;
-                font-weight: 100; 
-                font-size: 12px;
-            }
-        }
-    }
-} 
-
-.professional-information {
-    scroll-margin-top: 110px;
-    padding: 2rem 6rem;
-
-    .title {
-        text-align: center;
-        letter-spacing: 0.1em;
-        font-family: Futura, sans-serif;
-        font-size: 2rem;
-        margin-top: 1rem;
-        margin-bottom: 2rem;
-    }
-
-    .content {
-        column-count: 4;
-        column-gap: 3rem;
-        padding-bottom: 3rem;
-
-        p {
-            margin-top: 0;
-            font-weight: 500;
-            line-height: 1.5;
-            font-size: 14px;
-        }
-    }
-
-    .table-container {
-        display: flex;
-        margin-bottom: 2rem;
-
-        .table-header {
-            width: 25%;
-            padding: 1rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #FFF;
-
-            &.header-1 {
-                background-color: #0C5C20;
-            }
-
-            &.header-2 {
-                background-color: #B72618;
-            }
-
-            &.header-3 {
-                background-color: #004159;
-            }
-
-            h2 {
-                font-size: 1.8rem;
-                letter-spacing: 0.1em;
-                text-align: center;
-            }
-        }
-
-        .table-content {
-            width: 75%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            padding: 2rem 3rem 2rem 1rem;
-
-            &.content-1 {
-                background-color: #e7efe9;
-            }
-
-            &.content-2 {
-                background-color: #f8e9e8;
-            }
-
-            .company {
-                font-weight: 900;
-            }
-
-            ul {
-                margin: 0;
-                padding-left: 2rem;
-                
-                li {
-                    font-weight: 500;
-                    font-size: 16px;
-                    padding: 0.25rem 0;
-                    line-height: 1.5;
-                }
-            }
-
-            .education-item {
-                padding-left: 0.5rem;
-                font-size: 16px;
-                margin: 0.25rem;
-                line-height: 1.5;
-            }
-
-            p {
-                padding-left: 0.5rem;
-                font-size: 16px;
-                line-height: 1.5;
-                margin: 0;
-            }
-        }
-    }
-}
-
-.about-me {
-    scroll-margin-top: 105px;
-    padding: 2rem 6rem 6rem 6rem;
-    background-image: url('../images/EyePainting.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    .title {
-        text-align: center;
-        color: #FFF;
-        letter-spacing: 0.1em;
-        font-family: Futura, sans-serif;
-        font-size: 2rem;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    .about-me-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-
-        .about-me-content {
-            display: flex;
-            padding: 1.3rem;
-            background-color: white;
-            gap: 1.2rem;
-            
-            .images-wrapper {
-                display: flex;
-                gap: 1.2rem;
-                padding: 0.2rem 0;
-
-                .image-container {
-                    width: 215px;
-                    height: 215px;
-                    overflow: hidden;
-                    position: relative;
-            
-                    img {
-                        position: absolute;
-                        top: 50%; 
-                        left: 50%;
-
-                        &.image-1 {
-                            width: 14rem;
-                            transform: translate(-49%, -50%);
-                        }
-
-                        &.image-2 {
-                            width: 16rem;
-                            transform: translate(-55%, -60%);
-                        }
-
-                        &.image-3 {
-                            width: 18rem;
-                            transform: translate(-50%, -50%);
-                        }
-                    }
-                }    
-            }
-            
-
-            .about-me-text {
-                p {
-                    font-size: 14px;
-                    margin: 0;
-                    margin-bottom: 0.5rem;
-
-                    &:last-child {
-                        margin-bottom: 0;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.contact-me {
-    scroll-margin-top: 100px;
-    padding: 4rem 6rem 4rem 6rem;
-    background-color: #c2c2c2;
-    
-    .contact-me-container {
-        display: flex;
-        flex-wrap: wrap;
-
-        .col-1 {
-            width: 25%;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
-            .info {
-
-                .logo {
-                    width: 14rem;
-                    margin-bottom: 0.75rem;
-                }
-                
-                .email {
-                    font-weight: 700;
-                    font-size: 16px;
-                }
-            }
-
-            .acknowledgement {
-                font-size: 12px;
-                line-height: 1.8;
-                font-style: italic;
-            }
-        }
-        
-        .col-2 {
-            width: 35%;
-            padding: 0 4rem 0 1rem;
-
-            .quote-circle {
-                width: 100%;;
-            }
-        }
-        
-        .col-3 {
-            width: 40%;
-
-            .contact-form {
-                
-                .contact-header{
-                    background-color: #323232;
-                    color: #FFF;
-                    padding: 0.5rem 1rem;
-                    margin: 0;
-                    font-weight: 700;
-                    font-size: 14px;
-                }
-
-                .contact-content {
-                    position: relative;
-                    background-color: #adadad;
-                    padding: 1rem;
-
-                    .input-container {
-                        display: flex;
-
-                        .form-group {
-                            width: 50%;
-                        }
-                    }
-
-                    .form-group {
-                        display: flex;
-                        margin-bottom: 0.5rem;
-                        align-items: center;
-
-                        .input-label, .textarea-label {
-                            background-color: #FFF;
-                            padding: 10px;
-                            font-size: 12px;
-                            font-weight: 700;
-                        }
-
-                        .textarea-label {
-                            display: block;
-                            width: 100%;
-                        }
-                    
-                        input,
-                        textarea {
-                            width: 100%;
-                            padding: 10px;
-                            height: 34px;
-                            font-size: 12px;
-                            border: none;
-                            font-family: "Museo", sans-serif;
-                        
-                            &:focus {
-                                outline: none;
-                            }
-                        }
-
-                        textarea {
-                            resize: none;
-                            height: auto;
-                            padding: 0 10px 10px 10px;
-                        }
-                    }
-
-                    .textarea-group {
-                        display: block;
-                    }
-
-                    .submit-button {
-                        position: absolute;
-                        bottom: 10%;
-                        left: 42.5%;
-
-
-                        background-color: #f36c22;
-                        color: #FFF;
-                        border: none;
-                        border-radius: 1rem;
-                        font-weight: 700;
-                        font-family: "Museo", sans-serif;
-                        font-size: 12px;
-                        padding: 0.4rem 1rem;
-
-                        &:hover {
-                            cursor: pointer;
-                        }
-                    }
-                }
-            }
-        }
+    @include break('xs') {
+        font-size: 1.2rem;
     }
 }
