--- a/src/assets/styles/_animations.scss
+++ b/src/assets/styles/_animations.scss
@@ -1,30 +1,55 @@
-.fade-enter-active,
-.fade-leave-active {
+//Fade
+.fade-enter-active, .fade-leave-active {
     transition: opacity 0.5s ease;
 }
-.fade-enter-from,
-.fade-leave-to {
+.fade-enter-from,.fade-leave-to {
     opacity: 0;
 }
 
-.slow-fade-enter-active,
-.slow-fade-leave-active {
+
+//Slow Fade
+.slow-fade-enter-active,.slow-fade-leave-active {
     transition: opacity 1s ease;
 }
-.slow-fade-enter-from,
-.slow-fade-leave-to {
+.slow-fade-enter-from,.slow-fade-leave-to {
     opacity: 0;
 }
 
-.site-fade-enter-active, 
-.site-fade-leave-active {
+
+//Site Fade
+.site-fade-enter-active, .site-fade-leave-active {
     transition: opacity 0.5s,
 }
-.site-fade-enter-from, 
-.site-fade-leave-to {
+
+.site-fade-enter-from, .site-fade-leave-to {
     opacity: 0;
 }
-.site-fade-enter-to, 
-.site-fade-leave-from {
+
+.site-fade-enter-to, .site-fade-leave-from {
     opacity: 1;
+}
+
+
+//Slide Out
+.slide-out-enter-active {
+    transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.slide-out-leave-active {
+    transition: opacity 0.5s ease;
+}
+
+.slide-out-enter-from  {
+    transform: translateY(-25%);
+    opacity: 0;
+}
+
+.slide-out-leave-to {
+    transform: translateY(0);
+    opacity: 0;
+}
+
+.slide-out-enter-to, .slide-out-leave-from {
+    transform: translateY(0); 
+    opacity: 1; 
 }
