--- a/src/assets/styles/views/_about-me.scss
+++ b/src/assets/styles/views/_about-me.scss
@@ -60,7 +60,7 @@
             p {
                 font-size: 14px;
                 margin: 0;
-                margin-bottom: 0.5rem;
+                margin-bottom: 1rem;
 
                 &:last-child {
                     margin-bottom: 0;
@@ -77,6 +77,18 @@
 
             .about-me-text {
                 margin: 1.4rem 0 0.2rem 0;
+            }
+        }
+    }
+}
+
+@include break('l') {
+    .about-me {
+        .about-me-container {
+            .about-me-text {
+                p {
+                    margin-bottom: 0.5rem;
+                }
             }
         }
     }
@@ -124,6 +136,8 @@
 
 @include break('s') {
     .about-me {
+        padding-left: 0;
+        padding-right: 0;
         .about-me-container {
             .images-wrapper {
                 .image-container {
