--- a/src/assets/styles/views/_editing.scss
+++ b/src/assets/styles/views/_editing.scss
@@ -50,6 +50,24 @@
                 .project-image {
                     z-index: 1; 
                 }
+
+                .play-button-wrapper {
+                    background: transparent;
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    z-index: 4;
+
+                    .play-button {
+                        position: absolute;
+                        width: 6rem;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        z-index: 3;
+                        opacity: 0.6;
+                    }
+                }
             }
             
         
@@ -74,7 +92,7 @@
     }
 } 
 
-@include break('l') {
+@include break('m') {
     .editing {
         .video-components {
             .video-component {
@@ -82,6 +100,12 @@
 
                 .video-container {
                     height: 10rem;
+
+                    .play-button-wrapper {
+                        .play-button {
+                            width: 4rem;
+                        }
+                    }
                 }
                 .project-title {
                     font-size: 12px;
