--- a/src/assets/styles/views/_professional-information.scss
+++ b/src/assets/styles/views/_professional-information.scss
@@ -149,9 +149,12 @@
 
 @include break('s') {
     .professional-information {
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0;
         .content {
-            padding-left: 0.2rem;
-            padding-right: 0.2rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
 
             column-count: 2;
             column-gap: 1rem;
@@ -170,6 +173,7 @@
             .table-content {
                 padding: 2rem 1rem 2rem 1rem;
                 ul {
+                    padding-left: 1.5rem;
                     li {
                         font-size: 14px;
                     }
